NP-47010-resource-service-assume-eventual-consistency-will-happen, code-review